--- a/myapp/package.json
+++ b/myapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^2.1.11",
+    "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
