--- a/myapp/package.json
+++ b/myapp/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@stripe/stripe-js": "^2.1.11",
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
@@ -20,7 +21,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "stripe": "^14.3.0",
     "timeago.js": "^4.0.2"
   },
