--- a/myapp/package.json
+++ b/myapp/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
